--- a/src/app/components/text-box/text-project/text-project.component.scss
+++ b/src/app/components/text-box/text-project/text-project.component.scss
@@ -3,7 +3,7 @@
 .text-project {
     @include flex(column, center, center, 2rem);
     @include laptop {
-        align-items: flex-start;
+        align-items: center;
     }
     &__title {
         @include t5-bold;
